Kubernetes_Practical_tasks/7.Ingresses/T2/color-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: colors.k8slab.net
      http:
        paths:
          - path: /aqua
            pathType: Prefix
            backend:
              service:
                name: aqua-svc
                port:
                  number: 80

          - path: /maroon
            pathType: Prefix
            backend:
              service:
                name: maroon-svc
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: olive-svc
                port:
                  number: 80
status:
  loadBalancer: {}
